# ntt-ai-hpc

./: CMakeLists.txt  README.md
benchmarks/: bench_comparison.cpp  bench_ntt.cpp
demo/: stark_demo.cpp
python/: ntt_ai_book.ipynb  requirements.txt
python/api/: __init__.py  app.py  cost_model.pt  cost_model_xgb.pkl  scaler.pkl  test_api.py
results/: comparison.csv  result.csv
scripts/: add_xgb_cells.py  build.sh  comparison.py  save_mlp_plots.py  save_plots.py  save_xg_plots.py
src/: main.cpp
src/core/: ntt.cpp  ntt.h
tests/: test_ntt.cpp
